--- a/_config.yml
+++ b/_config.yml
@@ -99,7 +99,7 @@ analytics:
 # Site Author
 author:
   name             : "George Burry"
-  avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
+  avatar           : "/images/bio-photo.jpg" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "Python developer with data science skills from New Zealand."
   location         : "Bratislava, Slovakia"
   email            :
