--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,6 +1,9 @@
 # main links
 main:
-  - title: "Quick-Start Guide"
+  - title: "About"
+    url: /about/
+  - title: "Data Science Bootcamp"
+    url: /data-science-bootcamp/
     url: https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/
   # - title: "About"
   #   url: https://mmistakes.github.io/minimal-mistakes/about/
