--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ title                    : "George Burry"
 title_separator          : "-"
 name                     : "George Burry"
 description              : "An amazing website."
-url                      : "https://georgeburry.github.io/" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
